@@ -12,6 +12,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 - Não é mais possível anunciar `Erva` na feirinha.
 - Não é mais possível anunciar uma planta que você já tenha um anúncio na feirinha.
 
+### Fixed
+
+- Corrigido o problema do "maior lucro" das mensagens do Jogo do Bicho no servidor de suporte - Reportado por @maycon.orp.
+
 ## [5.17.2] - 2024-06-01
 
 ### Added
